@@ -14,6 +14,8 @@
 	always force swf version and sandbox redefinition
 	added as3hl layer
 	merge as3 classes
+	use flash9 fast switch for enums
+	always use match for enums (no switch even if constant)
 
 2007-10-31: 1.16
 	use _sans font for default flash traces (better Linux support)
